k8s/frontend-depoloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers: 
        - name: frontend
          image: sejal18/frontend:latest
          ports:
            - containerPort: 3000
