k8s/backend-cluster-ip-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 5000
      targetPort: 5000
